# robotics

./: .gitignore  package.xml  singularity-file.json
config/: config.yaml  costmap_parameters.yaml
launch/: README.md  lab5.world  move_base.launch
scripts/: CircleIdentifier.py  ColourIdentifier.py  FrameIdentifier.py  Timer.py  main.py
utility/: change_cluedo_character.sh  run_gazebo.sh  run_project.sh
world_manager/: commands.sh  common.sh  evaluation_script.sh  kill_all.sh  main.sh  open_world.sh
world_manager/worlds/world1/: input_points.yaml  localise_pose.sh  project.world  start_pose.sh
world_manager/worlds/world2/: init_pose.sh  input_points.yaml  project.world
world_manager/worlds/world2/map/: project_map.yaml
